1.31 2013-
  - Improved the abstract, including correcting module name
  - Added link to review of similar modules in SEE ALSO

v1.30  2013-01-18 17:24:19 EST  Mark Leighton Fisher
  - Moved to Git for source control.
  - Added the GitHub repo
    https://github.com/markleightonfisher/pmtools.
  - Fixed Devel/Loaded.pm so it is not added to the
    output. Thanks to NEILB@cpan.org for spotting this
    bug (a modern Perls bug).
  - Patched pmeth to flag Perl constants as such (thanks
    to jpierce@cpan.org for the patch). XS constants
    are not yet marked (some C-fu needs to be applied).
  - Patched basepods to use 'pods' as the directory for
    the base PODs (modern Perls use 'pods'). Alas, this
    appears to be inspired by a CPANgnome, as there was
    no Requestor on the ticket. :(

v1.20  2012-12-07 15:25:50 EST  Mark Leighton Fisher
  - Patched pminst so only unique package names are printed.
    Thanks to Matthew Persico for the patch. (Honorable
    mention goes to Andrew Pam, but Matthew's patch is
    smaller and more robust as it handles an @INC with
    directories in any order.)
  - Fixed pminst to ignore non-existent directories.
  - Added pmcheck, a tool to check that Perl is set up
    correctly for use with Perl modules. Currently,
    pmcheck only verifies that everything in @INC is an
    existing, readable directory.

v1.10  2008-01-18 06:57:21 EST  Mark Leighton Fisher
  - Added copyrights in my name as well as Tom Christiansen.
  - Changed to dual-license like Perl: GNU and Perl Artistic.
    This was at the request of the Fedora project, as they
    wanted a version of pmtools licensed under GNU.

v1.01  2006-03-21 21:33:52 EST  Mark Leighton Fisher
  - Two sets of patches from Jose Pedro Oliveira:
    1. Added missing pmeth to Makefile.PL.
    2. "$mod" was partially renamed to "$module" in my copy; this
       patch restores it to "$mod".
  - Added Changes and TODO files.
  - Updated MANIFEST with Changes and TODO.